test update func